--- a/src/assets/styles/_card.scss
+++ b/src/assets/styles/_card.scss
@@ -1,5 +1,16 @@
 @import '_variables.scss';
 
-h1 {
-    font-size: $font-size;
+
+.title {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    font-size: $font-size-bg;
+    color: $color-title;
+}
+
+.text {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    font-size: $font-size-sm;
+    color: $color-text;
 }
