--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -1,1 +1,9 @@
-$font-size: 30x;
+@font-face {
+    font-family: 'Roboto', sans-serif;
+    src: url('../fonts/Roboto/Roboto-Light.ttf') format('truetype');
+}
+
+$font-size-bg: 30px;
+$font-size-sm: 20px;
+$color-title: red;
+$color-text: green;
